--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         .stream-buttons .youtube-btn,
         .stream-buttons .twitch-btn,
         .stream-buttons .rumble-btn,
-        .stream-buttons .kick-btn,
-        .stream-buttons .trovo-btn {
+        .stream-buttons .kick-btn {
             flex: 1;
             padding: 0.5rem;
             margin: 0 0.25rem;
@@ -87,9 +86,6 @@
         }
         .stream-buttons .kick-btn {
             background-color: #32CD32;
-        }
-        .stream-buttons .trovo-btn {
-            background-color: #00BFFF;
         }
         .tabs {
             display: flex;
@@ -109,9 +105,6 @@
         }
         .tabs .rumble-btn {
             background-color: lightgreen;
-        }
-        .tabs .x-btn {
-            background-color: black;
         }
         .tabs img {
             height: 20px;
@@ -166,11 +159,6 @@
             top: 10px;
             left: 10px;
         }
-        .twitter-iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
     </style>
     <script>
         async function loadConfig() {
@@ -196,7 +184,6 @@
             if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
             if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
             if (config.kick_live_id) document.querySelector('.kick-btn').style.display = 'block';
-            if (config.trovo_live_id) document.querySelector('.trovo-btn').style.display = 'block';
 
             return config;
         }
@@ -208,7 +195,6 @@
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
             const kickEmbed = `https://kick.com/${config.kick_live_id}/embed`;
-            const trovoEmbed = `https://trovo.live/embed/player?streamername=${config.trovo_live_id}`;
 
             const iframe = document.getElementById('live-stream');
 
@@ -220,8 +206,6 @@
                 iframe.src = rumbleEmbed;
             } else if (service === 'kick') {
                 iframe.src = kickEmbed;
-            } else if (service === 'trovo') {
-                iframe.src = trovoEmbed;
             }
         }
 
@@ -258,38 +242,11 @@
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
-        async function loadTwitterFeed() {
-            const config = await loadConfig();
-            const response = await fetch(config.x_id_list);
-            let tweetIds = await response.json();
-
-            // Ensure tweetIds is an array
-            if (!Array.isArray(tweetIds)) {
-                tweetIds = [tweetIds];
-            } else {
-                tweetIds.reverse();
-            }
-
-            const twitterIframeContainer = document.getElementById('twitter-iframe-container');
-            twitterIframeContainer.innerHTML = ''; // Clear previous iframes if any
-
-            tweetIds.forEach(tweet => {
-                const iframe = document.createElement('iframe');
-                iframe.className = 'twitter-iframe';
-                iframe.src = `https://twitframe.com/show?url=https://twitter.com/i/status/${tweet.Tweet_ID}`;
-                iframe.style.width = "100%";
-                iframe.style.height = "auto";
-                iframe.frameBorder = "0";
-                twitterIframeContainer.appendChild(iframe);
-            });
-        }
-
         window.onload = async function() {
             await loadStream();
             await loadChat();
             switchTab('twitch-chat');
             await loadMenu();
-            await loadTwitterFeed();
         }
     </script>
 </head>
@@ -304,7 +261,6 @@
                 <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
                 <button class="rumble-btn" style="display:none" onclick="loadStream('rumble')">Rumble</button>
                 <button class="kick-btn" style="display:none" onclick="loadStream('kick')">Kick</button>
-                <button class="trovo-btn" style="display:none" onclick="loadStream('trovo')">Trovo</button>
             </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
@@ -313,7 +269,6 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-                <button class="x-btn" onclick="switchTab('twitter-chat')">X</button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -323,9 +278,6 @@
             </div>
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
-            </div>
-            <div id="twitter-chat" class="tab-content">
-                <div id="twitter-iframe-container"></div>
             </div>
         </div>
     </main>
